Fixing word wrap

--- a/frontend/css/posts.css
+++ b/frontend/css/posts.css
@@ -58,6 +58,7 @@
   line-height: 15px;
   margin-left: 126px; /* Two characters of margin, 7px each */
   display: block;
+  word-wrap: break-word;
 }
 
 .bits-post-presence,
